kubernetes/website-tns/deployment.yaml
# Deployment File
# - domain:  tech-noid.net
# - purpose: website

# setup the namespace
apiVersion: v1
kind: Namespace
metadata:
  name: technoidsystems
---
# do the deployment of the beast
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tns-website
  namespace: technoidsystems
  labels:
    domain: tech-noid.net
    app: technoidsystems  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: technoidsystems
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: technoidsystems
    spec:
      containers:
        - name: tns-website
          image: technoidsystems/website:v1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
# setup NodePort access (for use with nginx)
apiVersion: v1
kind: Service
metadata:
  name: tns-website
  namespace: technoidsystems
spec:
  selector:
    app: technoidsystems
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30200
